# gazebo_control

./: .clangd  CMakeLists.txt  README.md  package.xml  ros2_control.xml
config/: config.yaml
description/: diffbot.urdf.xacro  robot_core.xacro
description/launch/: diffbot.launch.py  view_robot.launch.py
description/ros2_control/: diffbot.ros2_control.xacro
description/rviz/: diffbot.rviz
description/urdf/: diffbot.urdf.xacro  diffbot.xacro  diffbot_description.urdf.xacro  gazebo_control.xacro
hardware/: diffbot_system.cpp
hardware/include/ros2_control/: diffbot_system.hpp  visibility_control.hpp
include/gazebo_control/: control.hpp  pid_control.hpp
launch/: launch_sim.launch.py  rsp.launch.py
src/: control.cpp  main.cpp  pid_control.cpp
